k8s/istio/vs-server.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: server
spec:
  hosts:
    - server
  http:
    - route:
        - destination:
            host: server
            subset: v1
          weight: 100
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: server
spec:
  host: server
  # Comment out trafficPolicy to use default traffic distribution
  trafficPolicy:
    loadBalancer:
      consistentHash:
#        useSourceIp: true # traffic distribution based on source pod IP
        httpHeaderName: x-user # traffic distribution based on header value
  subsets:
    - name: v1
      labels:
        app: server
